@@ -1,3 +1,13 @@
+2011-04-07 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/lib/mcs51/Makefile.in,
+	* device/lib/mcs51/crtxpopbits.asm, device/lib/mcs51/crtxpopr0.asm: renamed
+	* device/lib/mcs51/crtxpop.asm,
+	* device/lib/mcs51/crtxpush.asm,
+	* device/lib/mcs51/crtxpushr0.asm,
+	* src/mcs51/gen.c (xstackRegisters, saveRegisters, unsaveRegisters,
+	  genSend): fixed for new register order
+
 2011-03-31 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/ralloc.c (regs8051, serialRegAssign),
